Fix ViewHeader align bug

--- a/app/src/views/Search/SearchView.css
+++ b/app/src/views/Search/SearchView.css
@@ -9,6 +9,7 @@
 }
 
 .SearchView header input {
+  margin-left: 32px;
 }
 
 .SearchView .results {
